--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
 *.bz2 filter=lfs diff=lfs merge=lfs -text
+tf2/maps/*.bz2 filter=lfs diff=lfs merge=lfs -text
 *.gitignore filter=lfs diff=lfs merge=lfs -text
 *.bsp filter=lfs diff=lfs merge=lfs -text
 *.nav filter=lfs diff=lfs merge=lfs -text
